# esp32-433mhz-rf-controller

./: .gitignore  CMakeLists.txt  README.md  build.sh  sdkconfig.defaults
components/rc_switch/: CMakeLists.txt  rc_switch.c  rc_switch.h
main/: CMakeLists.txt  config.h.example  main.c  wifi_config.h.example
main/web/: index.html
main/web/css/: base.css  signals.css  tabs.css
main/web/js/: api-docs.js  api.js  app.js  settings.js  signals.js
main/web/tabs/: api.html  manual.html  monitor.html  settings.html  signals.html
